# avax_bridge

./: .gitignore  Readme.md
bitcoin/executor/: Cargo.toml
bitcoin/executor/src/: executor.rs  main.rs  orders.rs  settings.rs  wallet.rs
bitcoin/primitives/: Cargo.toml
bitcoin/primitives/src/: htlc.rs  htlc_handler.rs  indexer.rs  lib.rs  scripts.rs  types.rs
bitcoin/watcher/: Cargo.toml  README.md  Settings.toml
bitcoin/watcher/src/: events.rs  main.rs  settings.rs  store.rs  watcher.rs
bridge-ui/: Readme.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
bridge-ui/src/: App.tsx  main.tsx
bridge-ui/src/components/: AssetDropdown.tsx  ConnectWallet.tsx  Navbar.tsx  OrderDetails.tsx  OrderDetailsModal.tsx  OrdersSidebar.tsx  PendingOrdersManager.tsx  Swap.tsx  SwapProgress.tsx  UserOrders.tsx
bridge-ui/src/config/: wagmi.ts
bridge-ui/src/constants/: constants.ts
bridge-ui/src/hooks/: useBTCWallet.ts  useDigestKey.ts
bridge-ui/src/pages/: HomePage.tsx
bridge-ui/src/services/: atomicSwapABI.ts  contractService.ts  orderService.ts  utils.ts
bridge-ui/src/services/bitcoin/: ASConfig.ts  htlc.ts  htlcScript.ts  utils.ts
bridge-ui/src/store/: assetsStore.ts  ordersStore.ts  walletStore.ts
bridge-ui/src/types/: api.ts
bridge-ui/src/utils/: digestKey.ts  networkUtils.ts  utils.ts
contracts/: foundry.toml
contracts/broadcast/DeployRegistry.s.sol/421614/: run-latest.json
contracts/broadcast/DeployRegistry.s.sol/43113/: run-1755945325628.json  run-latest.json
contracts/broadcast/DeployUSDC.s.sol/421614/: run-1755944357627.json  run-1755946305290.json  run-1755993004385.json
contracts/script/: DeployNativeAtomicSwap.s.sol  DeployRegistry.s.sol  DeployUSDC.s.sol  DeployWBTC.s.sol  Testing_inits.s.sol  deployAtomicSwap.s.sol
contracts/src/: AtomicSwap.sol  AtomicSwapRegistry.sol  NativeAtomicSwap.sol  Token.sol  UDA.sol
contracts/test/: TestAtomicSwap.t.sol
evm/executor/: .gitignore  README.md  config.ts  package.json  test-setup.ts  tsconfig.json
evm/executor/abi/: atomicSwap.json  htlc.json
evm/executor/src/: index.ts  types.ts
evm/uda/: README.md  package-lock.json  package.json
evm/uda/src/: config.ts  index.ts  types.ts
evm/watcher/: ATOMIC_SWAP_SETUP.md  README.md  config.ts  package-lock.json  package.json  tsconfig.json
evm/watcher/abi/: atomic_swap.json  erc20.json  native_atomic_swap.json  registry.json
evm/watcher/src/: index.ts
orderbook/: Cargo.toml  Readme.md  config.json
orderbook/src/: bitcoin_htlc.rs  config.rs  main.rs  primitives.rs  services.rs
orderbook/src/abi/: registry.json
quote/: package-lock.json  package.json
quote/src/: config.ts  index.ts
quote/src/services/: cmcService.ts  priceService.ts  quoteService.ts  supportedAssetsService.ts
quote/src/types/: api.ts
quote/src/utils/: parser.ts
(+45 files in other folders)
