[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
mongodb = "2.8"
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
hex = "0.4"
num-bigint = "0.4"
sha2 = "0.10"
eyre = "0.6"
alloy = { version = "1.0.7", features = ["full"] }
bitcoin = "0.32"
once_cell = "1.19"


[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
