[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.32.7"
chrono = "0.4.41"
hex = "0.4.3"
mongodb = "3.2.5"
primitives = { path = "../primitives" }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.86"
async-trait = "0.1.81"
futures = "0.3.30"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.12"
rand = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
