[package]
name = "primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.32.0"
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
chrono = "0.4.41"
mongodb = "3.2.5"
