[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
primitives = { path = "../primitives" }
bitcoin = "0.32.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ripemd = "0.1"
sha2 = "0.10"
hex = "0.4"
moka = { version = "0.12.10", features = ["future"] }
